--- a/games/tea-clicker.html
+++ b/games/tea-clicker.html
@@ -78,6 +78,7 @@
             margin-top: 80px; /* Adjust for navbar height */
             display: flex;
             height: calc(100% - 80px);
+            overflow: hidden; /* Prevent scrolling in main content */
         }
 
         /* Sidebar */
@@ -122,6 +123,7 @@
             align-items: center;
             justify-content: center;
             position: relative;
+            overflow: hidden; /* Prevent scrolling in main content */
         }
 
         .kettle-container {
@@ -157,7 +159,6 @@
             border-radius: 10px;
             border: 1px solid #8B4513; /* Saddle brown border */
             cursor: pointer;
-            z-index: 1; /* Set a higher z-index */
         }
 
         .upgrade:hover {
@@ -185,51 +186,27 @@
         }
 
         /* Tooltip Styling */
-        .upgrade-description {
-            visibility: hidden;
-            width: 200px;
+        .tooltip {
+            position: absolute;
+            z-index: 99999; /* Ensure tooltip appears over all other elements */
             background-color: #8B4513;
             color: #FFFFFF;
-            text-align: center;
-            border-radius: 8px;
             padding: 8px;
-            position: absolute;
-            z-index: 9999; /* Ensure tooltip appears over all other elements */
-            bottom: 120%;
-            left: 50%;
-            margin-left: -100px;
-            opacity: 0;
-            transition: opacity 0.3s;
+            border-radius: 8px;
+            text-align: center;
+            width: 200px;
+            pointer-events: none; /* Ensure tooltip doesn't interfere with mouse events */
         }
 
-        /* Tooltip Arrow */
-        .upgrade-description::after {
+        .tooltip::after {
             content: "";
             position: absolute;
-            top: 100%;
-            left: 50%;
-            margin-left: -8px;
             border-width: 8px;
             border-style: solid;
             border-color: #8B4513 transparent transparent transparent;
-        }
-
-        /* Special Styling for Better Kettle Tooltip */
-        .better-kettle .upgrade-description {
-            bottom: auto;
-            top: 120%;
-        }
-
-        .better-kettle .upgrade-description::after {
-            top: -16px;
-            bottom: auto;
-            border-color: transparent transparent #8B4513 transparent;
-        }
-
-        /* Show Tooltip on Hover */
-        .upgrade:hover .upgrade-description {
-            visibility: visible;
-            opacity: 1;
+            bottom: 100%;
+            left: 50%;
+            margin-left: -8px;
         }
 
         /* Tea Per Second Display */
@@ -312,30 +289,6 @@
 
             .save-load-buttons button {
                 margin: 5px 0;
-            }
-
-            /* Adjust tooltip positioning for mobile */
-            .upgrade-description {
-                bottom: auto;
-                top: 110%;
-                left: 50%;
-                margin-left: -100px;
-            }
-
-            .upgrade-description::after {
-                top: -16px;
-                bottom: auto;
-                border-color: transparent transparent #8B4513 transparent;
-            }
-
-            /* Override for Better Kettle Tooltip on Mobile */
-            .better-kettle .upgrade-description {
-                top: 110%;
-            }
-
-            .better-kettle .upgrade-description::after {
-                top: -16px;
-                border-color: transparent transparent #8B4513 transparent;
             }
         }
     </style>
@@ -462,6 +415,8 @@
             // Add more upgrades as desired
         ];
 
+        let tooltipDiv; // Global variable for the tooltip
+
         function brewTea() {
             teaCount += teaPerClick;
             updateTeaCount();
@@ -502,11 +457,6 @@
                 upgradeDiv.className = 'upgrade';
                 upgradeDiv.onclick = () => buyUpgrade(index);
 
-                // Add special class for Better Kettle
-                if (upgrade.name === 'Better Kettle') {
-                    upgradeDiv.classList.add('better-kettle');
-                }
-
                 let headerDiv = document.createElement('div');
                 headerDiv.className = 'upgrade-header';
 
@@ -522,21 +472,66 @@
                 costDiv.className = 'upgrade-cost';
                 costDiv.textContent = 'Cost: ' + upgrade.cost;
 
-                // Tooltip for description
-                let descriptionDiv = document.createElement('div');
-                descriptionDiv.className = 'upgrade-description';
-                descriptionDiv.textContent = upgrade.description;
-
                 headerDiv.appendChild(emojiDiv);
                 headerDiv.appendChild(nameDiv);
 
                 upgradeDiv.appendChild(headerDiv);
                 upgradeDiv.appendChild(costDiv);
-                upgradeDiv.appendChild(descriptionDiv);
+
+                // Add event listeners for tooltip
+                upgradeDiv.addEventListener('mouseenter', (e) => showTooltip(e, upgrade));
+                upgradeDiv.addEventListener('mouseleave', hideTooltip);
 
                 upgradesDiv.appendChild(upgradeDiv);
             });
         }
+
+        function showTooltip(event, upgrade) {
+            // Create tooltip element
+            tooltipDiv = document.createElement('div');
+            tooltipDiv.className = 'tooltip';
+            tooltipDiv.textContent = upgrade.description;
+
+            // Append to body
+            document.body.appendChild(tooltipDiv);
+
+            // Position tooltip
+            positionTooltip(event);
+        }
+
+        function hideTooltip() {
+            if (tooltipDiv) {
+                document.body.removeChild(tooltipDiv);
+                tooltipDiv = null;
+            }
+        }
+
+        function positionTooltip(event) {
+            if (tooltipDiv) {
+                const rect = event.target.getBoundingClientRect();
+                const tooltipRect = tooltipDiv.getBoundingClientRect();
+
+                let top = rect.top - tooltipRect.height - 10; // 10px gap
+                let left = rect.left + (rect.width - tooltipRect.width) / 2;
+
+                // If tooltip goes above viewport, place it below the element
+                if (top < 0) {
+                    top = rect.bottom + 10;
+                    tooltipDiv.style.transform = 'translateY(0%)';
+                    tooltipDiv.querySelector('::after').style.transform = 'rotate(180deg)';
+                }
+
+                tooltipDiv.style.left = left + 'px';
+                tooltipDiv.style.top = top + window.scrollY + 'px';
+            }
+        }
+
+        // Update tooltip position on mouse move
+        document.addEventListener('mousemove', (e) => {
+            if (tooltipDiv) {
+                positionTooltip(e);
+            }
+        });
 
         function autoBrew() {
             upgrades.forEach(upgrade => {
