--- a/games/tea-clicker.html
+++ b/games/tea-clicker.html
@@ -367,7 +367,7 @@
             {
                 name: 'Better Kettle',
                 emoji: '🫖',
-                description: 'Improves your kettle to brew more tea per click.',
+                description: 'Brew more tea per click.',
                 baseCost: 10,
                 cost: 10,
                 amount: 0,
