--- a/games/flappy-mug.html
+++ b/games/flappy-mug.html
@@ -158,8 +158,10 @@
         let mugX = canvas.width / 4;
         let mugY = canvas.height / 2;
         let mugVelocity = 0;
-        const gravity = 0.5;
-        const jumpStrength = -10;
+
+        // Adjusted Gravity and Jump Strength
+        const gravity = 0.2;          // Reduced gravity for smoother gliding
+        const jumpStrength = -6;      // Adjusted jump strength to balance
 
         // Pipes
         let pipes = [];
@@ -180,6 +182,12 @@
         // Event Listeners
         document.addEventListener('keydown', handleKeyDown);
         canvas.addEventListener('click', flap);
+
+        // Touch support for mobile devices
+        canvas.addEventListener('touchstart', (e) => {
+            e.preventDefault();
+            flap();
+        });
 
         function handleKeyDown(e) {
             if (e.code === 'Space' || e.code === 'ArrowUp') {
