--- a/games.html
+++ b/games.html
@@ -7,7 +7,7 @@
     <style>
         /* Global Styles */
         * {
-            box-sizing: border-box; /* Include padding and border in element's total width and height */
+            box-sizing: border-box;
             margin: 0;
             padding: 0;
         }
@@ -16,15 +16,7 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #F5F5DC; /* Beige background */
             color: #4B2E2A; /* Dark brown text */
-            /* Hide scrollbar for IE, Edge, and Firefox */
-            -ms-overflow-style: none;  /* IE and Edge */
-            scrollbar-width: none;  /* Firefox */
             overflow: hidden; /* Prevent scrolling */
-        }
-
-        /* Hide scrollbar for Chrome, Safari, and Opera */
-        body::-webkit-scrollbar {
-            display: none;
         }
 
         /* Navigation Bar */
@@ -87,7 +79,7 @@
             padding: 100px 20px 60px;
             text-align: center;
             margin-top: 100px; /* Adjust for navbar height */
-            border-radius: 10px; /* Rounded corners */
+            border-radius: 10px;
             margin: 20px;
             overflow: auto;
         }
@@ -106,7 +98,7 @@
         }
 
         .game-buttons a {
-            background-color: #8B4513; /* Saddle brown */
+            background-color: #8B4513;
             color: #FFFFFF;
             padding: 20px 40px;
             text-decoration: none;
@@ -117,19 +109,19 @@
         }
 
         .game-buttons a:hover {
-            background-color: #6B3A0E; /* Darker brown */
+            background-color: #6B3A0E;
             transform: translateY(-5px);
-            color: #FFDAB9; /* Light peach */
+            color: #FFDAB9;
         }
 
         /* Footer */
         .footer {
-            background-color: #8B4513; /* Saddle brown */
+            background-color: #8B4513;
             color: #FFFFFF;
             text-align: center;
             padding: 20px;
             font-size: 16px;
-            border-radius: 10px; /* Rounded corners */
+            border-radius: 10px;
             margin: 20px;
         }
 
@@ -188,7 +180,8 @@
         <div class="game-buttons">
             <a href="/games/2dtea.html">Tea Maze Adventure</a>
             <a href="/games/tea-clicker.html">Tea Clicker</a>
-            <a href="/games/teaquest/game.html">TeaQuest 3D</a>
+            <a href="/games/flappy-mug.html">Flappy Mug</a>
+            <a href="/games/teaquest3d.html">TeaQuest 3D</a>
         </div>
     </div>
 
