--- a/games.html
+++ b/games.html
@@ -181,7 +181,7 @@
             <a href="/games/2dtea.html">Tea Maze Adventure</a>
             <a href="/games/tea-clicker.html">Tea Clicker</a>
             <a href="/games/flappy-mug.html">Flappy Mug</a>
-            <a href="/games/teaquest3d.html">TeaQuest 3D</a>
+            <a href="/games/teaquest/game.html">TeaQuest 3D</a>
         </div>
     </div>
 
